<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addEarnings">


    <TextView
        android:id="@+id/hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/hours"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="97dp"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="154dp"
        android:text="@string/tax_opt"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="222dp"
        android:text="@string/place"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hrs_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/amt_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/tax_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="optional"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/place_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="229dp"
        android:layout_height="273dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/smtbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="142dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="420dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold" />
</android.widget.RelativeLayout>